# sandwich

./: .bazelignore  .bazelrc  .gitignore  404.html  BUILD.bazel  CHANGELOG.html  Cargo.toml  Dockerfile.linux  Dockerfile.linux_amd64  Dockerfile.linux_arm64  README.md  WORKSPACE  WORKSPACE.bazel  c_api.html  clang.bazelrc  index.html  install.html  mkdocs.yml  objects.inv  pyproject.toml  python_api.html  setup.py  some-text-file.yml
c/: BUILD.bazel  context.cc  error.cc  error_codes.h  errors.h  io.cc  io.h  ioerrors.h  sandwich.h  tests_utils.h  tunnel.cc  tunnel_handshake_state.h  tunnel_record_errors.h  tunnel_state.h  tunnel_types.h  tunnels_test.cc
cc/: BUILD.bazel  context.cc  context.h  context_factory.cc  data_source.cc  data_source.h  error.cc  error.h  error_codes.h  error_strings.cc  error_strings.h  error_test.cc  errors.h  exports.h  result.h  tests_utils.cc  tests_utils.h  tunnel.cc  tunnel.h  tunnel_handshake_state.h  tunnel_record_errors.h  tunnel_state.h  tunnel_types.h
cc/io/: BUILD.bazel  io.cc  io.h  ioerrors.h  socket.cc  socket.h
cc/openssl/: BUILD.bazel  client.cc  client.h  client_context_test.cc  context.cc  context.h  context_factory.cc  openssl.cc  openssl.h  server.cc  server.h  server_context_test.cc  tunnel.cc  tunnel.h  tunnel_closed_test.cc  tunnels_test.cc
docs/: BUILD.bazel  README.md  index.md  install.md  mkdocs.yml
docs/concepts/: BUILD.bazel  io.md  tunnel.md
docs/docs/: CHANGELOG.md  c_api.md  index.md  install.md  python_api.md
docs/examples/: BUILD.bazel  echo_tls_server.md  tls_client.md
docs/guide_doc/: BUILD.bazel
docs/guide_doc/src/: SUMMARY.md  architecture.md  disclaimer.md  examples.md  features.md  introduction.md  license.md  motivation.md
docs/images/: BUILD.bazel
docs/protobuf/: BUILD.bazel  index.md
docs/protobuf/api/: BUILD.bazel  index.md
examples/: BUILD.bazel  echo_tls_server.html  tls_client.html
examples/bazel/: .bazelrc  BUILD.bazel  WORKSPACE.bazel  main.rs
examples/go/echo_tls_server/: BUILD.bazel  cert.pem  go.mod  go.sum  key.pem  main.go
examples/go/tls_client/: BUILD.bazel  go.mod  go.sum  main.go
examples/python/: BUILD.bazel  test_client_server.py  test_examples.py
examples/python/echo_tls_server/: BUILD.bazel  main.py
examples/python/plaintext_socket/: BUILD.bazel  client_plain_socket.py  server_plain_socket.py
examples/python/tls_asyncio/: BUILD.bazel  client_asyncio_ssl.py  server_asyncio_ssl.py
examples/python/tls_asyncio_sandwich/: BUILD.bazel  client_asyncio_sandwich.py  server_asyncio_sandwich.py
examples/python/tls_asyncio_upgrade/: BUILD.bazel  client_asyncio_upgrade.py  server_asyncio_upgrade.py
examples/python/tls_client/: BUILD.bazel  main.py
examples/python/tls_sandwich/: BUILD.bazel  client_sandwich_socket.py  server_sandwich_socket.py
examples/python/tls_socket/: BUILD.bazel  client_ssl_socket.py  server_ssl_socket.py
examples/rust/echo_tls_server/: BUILD.bazel  echo_tls_server.rs  main.rs
examples/rust/tls_client/: BUILD.bazel  main.rs  tls_client.rs
go/: BUILD.bazel  build.go  errors.go  fuzz_test.go  gen_error_codes.template  generated_error_codes.go  go.mod  go.sum  io.go  sandwich.go  sandwich_test.go  tcp_test.go  tracing.go  tunnel.go  turbo_test.go
go/c/: BUILD.bazel  build.go  errors.go  go.mod  io.go  lib.go  listener.go  owned_io.go  tunnel.go  tunnel_io.go
go/errors/: BUILD.bazel  errors.go  gen_error_codes.template  generated_error_codes.go  go.mod
go/io/: BUILD.bazel  go.mod  io.go  listener.go
go/proto/: errors.pb.go  io.pb.go  sandwich.pb.go  tunnel.pb.go
go/proto/sandwich/: errors.pb.go  io.pb.go  sandwich.pb.go  tracing.pb.go  tunnel.pb.go
go/tunnel/: BUILD.bazel  go.mod  tunnel.go
proto/: BUILD.bazel  errors.proto  io.proto  sandwich.proto  tracing.proto  tunnel.proto
proto/api/v1/: BUILD.bazel  certificate.proto  compliance.proto  configuration.proto  data_source.proto  encoding_format.proto  private_key.proto  (+4 more)
pysandwich/: BUILD.bazel  async_turbo_test.py  blocking_turbo_test.py  constants.py  error_base.py  errors.py  gen_error_codes.template  generated_error_codes.py  io.py  io_helpers.py  listener.py  sandwich.py  sandwich_async.py  sandwich_protocol.py  tcp_test.py  tests.py  tracing.py  tunnel.py  tunnel_test.py
pysandwich/proto/: BUILD.bazel  errors.proto  io.proto  sandwich.proto  tunnel.proto
python/: BUILD.bazel  errors.py  io.py  sandwich.py  tunnel_test.py
rust/: BUILD.bazel  bindgen.h  boringssl_bindgen.h  context.rs  data_source.rs  errors.rs  io.rs  lib.rs  openssl_bindgen.h  ossl.rs  pimpl.rs  rules.bzl  tunnel.rs  tunnel_test.rs
rust/boringssl/: io.rs  mod.rs  ossl.rs
rust/error/: BUILD.bazel  code.rs  gen_error_codes.template  generated_error_codes.rs  mod.rs
rust/experimental/: BUILD.bazel  mod.rs
rust/ffi/: BUILD.bazel  context.rs  error.rs  io.rs  io_helpers.rs  listener.rs  mod.rs  support.rs  tunnel.rs
rust/implementation/: BUILD.bazel  mod.rs
rust/io/: BUILD.bazel  error.rs  mod.rs
rust/openssl/: bio.rs  certificate.rs  client.rs  context.rs  io.rs  mod.rs  ossl.rs  private_key.rs  security.rs  server.rs  tunnel.rs
rust/support/: BUILD.bazel  data_source.rs  mod.rs  pimpl.rs  tracing.rs
rust/tls/: mod.rs  security.rs
rust/tunnel/: BUILD.bazel  context.rs  io.rs  mod.rs
rust_vendor/bazelisk-rs/: Cargo.toml  README.md
sandwich_c/: BUILD.bazel  async_turbo_test.cc  blocking_turbo_test.cc  error.h  error_codes.h  errors_test.cc  export.h  io.h  ioerrors.h  lib.h  listener.h  sandwich.h  tcp_test.cc  tests_utils.h  tracer.h  tunnel.h  tunnel_types.h  tunnels_test.cc  turbo.h
testdata/: 127.0.0.1.cert.pem  127.0.0.1.key.pem  BUILD.bazel  cert.der  cert.pem  cert_expired.pem  cert_unknown_sig_alg.der  dilithium5.cert.pem  dilithium5.key.pem  email_and_dns_wildcard.cert.pem  email_and_dns_wildcard.key.pem  etc_ssl_cert.pem  etc_ssl_cert_invalid.pem  example.com.cert.pem  example.com.key.pem  falcon1024.cert.pem  falcon1024.key.pem  key.der  localhost.cert.pem  localhost.key.pem  private_key_cert_expired.pem  user@example.com.cert.pem  user@example.com.key.pem
(+675 files in other folders)
