[package]
name = "sandwich"
version = "0.1.0"
edition = '2021'
authors = ["SandboxAQ <sandwich@sandboxaq.com>"]
description = "A simple, unified, and hard to misuse API for developers to use cryptographic algorithms and protocols."
repository = "https://github.com/sandbox-quantum/sandwich"
license = "AGPL-3.0-only"
keywords = ["cryptography"]
categories = ["cryptography"]



[workspace]
members = [
    "rust_vendor/bazelisk-rs",
    "rust_vendor/boringssl",
    "rust_vendor/build-support",
    "rust_vendor/openssl1_1_1",
    "rust_vendor/sandwich-api-proto",
    "rust_vendor/sandwich-proto",
    "rust_vendor/testdata",
]

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
path = "rust/lib.rs"

[features]
boringssl = []
default = ["openssl1_1_1", "boringssl", "tunnel"]
ffi = []
openssl1_1_1 = []
tunnel = []

[dependencies]
boringssl = { path = "rust_vendor/boringssl" }
openssl1_1_1 = { path = "rust_vendor/openssl1_1_1" }
protobuf = "3.2.0"
sandwich-api-proto = { path = "rust_vendor/sandwich-api-proto" }
sandwich-proto = { path = "rust_vendor/sandwich-proto" }

[dev-dependencies]
testdata = { path = "rust_vendor/testdata" }
