[package]
name = "sandwich"
version = "0.2.0"
edition = '2021'
authors = ["SandboxAQ <sandwich@sandboxaq.com>"]
description = "A simple, unified, and hard to misuse API for developers to use cryptographic algorithms and protocols."
repository = "https://github.com/sandbox-quantum/sandwich"
license = "AGPL-3.0-only"
keywords = ["cryptography"]
categories = ["cryptography"]



[workspace]
members = [
    "rust_vendor/bazelisk-rs",
    "rust_vendor/boringssl",
    "rust_vendor/build-support",
    "rust_vendor/openssl1_1_1",
    "rust_vendor/openssl3",
    "rust_vendor/sandwich-api-proto",
    "rust_vendor/sandwich-proto",
    "rust_vendor/testdata",
    "rust_vendor/tracing_proto",
]

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
path = "rust/lib.rs"

[features]
boringssl = []
default = ["openssl1_1_1", "openssl3", "boringssl", "tunnel"]
ffi = []
openssl1_1_1 = []
openssl3 = []
tunnel = []
turbo = []

[dependencies]
boringssl = { path = "rust_vendor/boringssl" }
openssl1_1_1 = { path = "rust_vendor/openssl1_1_1" }
openssl3 = { path = "rust_vendor/openssl3" }
protobuf = "=3.3.0"
sandwich-api-proto = { path = "rust_vendor/sandwich-api-proto" }
sandwich-proto = { path = "rust_vendor/sandwich-proto" }
tracing-proto = { path = "rust_vendor/tracing_proto"}

[dev-dependencies]
testdata = { path = "rust_vendor/testdata" }

[[test]]
name = "depth-exceeded"
path = "rust/implementation/openssl3/tunnel/tests/depth_exceeded.rs"
required-features = ["openssl3", "tunnel"]

[[test]]
name = "expired-certificate"
path = "rust/implementation/openssl3/tunnel/tests/expired_certificate.rs"
required-features = ["openssl3", "tunnel"]

[[test]]
name = "mtls"
path = "rust/implementation/openssl3/tunnel/tests/mtls.rs"
required-features = ["openssl3", "tunnel"]

[[test]]
name = "subject-alt-names-dns"
path = "rust/implementation/openssl3/tunnel/tests/subject_alt_names_dns.rs"
required-features = ["openssl3", "tunnel"]

[[test]]
name = "subject-alt-names-email"
path = "rust/implementation/openssl3/tunnel/tests/subject_alt_names_email.rs"
required-features = ["openssl3", "tunnel"]

[[test]]
name = "subject-alt-names-ip-address"
path = "rust/implementation/openssl3/tunnel/tests/subject_alt_names_ip_address.rs"
required-features = ["openssl3", "tunnel"]

[[test]]
name = "tls-classical"
path = "rust/implementation/openssl3/tunnel/tests/tls_classical.rs"
required-features = ["openssl3", "tunnel"]

[[test]]
name = "tls-hybrid"
path = "rust/implementation/openssl3/tunnel/tests/tls_hybrid.rs"
required-features = ["openssl3", "tunnel"]

[[test]]
name = "tls-quantum-resistant"
path = "rust/implementation/openssl3/tunnel/tests/tls_quantum_resistant.rs"
required-features = ["openssl3", "tunnel"]
