workspace(name = "sandwich")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    sha256 = "74d544d96f4a5bb630d465ca8bbcfe231e3594e5aae57e1edbf17a6eb3ca2506",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.3.0/bazel-skylib-1.3.0.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.3.0/bazel-skylib-1.3.0.tar.gz",
    ],
)

http_archive(
    name = "rules_foreign_cc",
    sha256 = "6041f1374ff32ba711564374ad8e007aef77f71561a7ce784123b9b4b88614fc",
    strip_prefix = "rules_foreign_cc-0.8.0",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/0.8.0.tar.gz",
)

http_archive(
    name = "rules_python",
    sha256 = "b593d13bb43c94ce94b483c2858e53a9b811f6f10e1e0eedc61073bd90e58d9c",
    strip_prefix = "rules_python-0.12.0",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.12.0.tar.gz",
)

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python3",
    python_version = "3.10",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "com_google_protobuf",
    commit = "ab840345966d0fa8e7100d771c92a73bfbadd25c",
    remote = "https://github.com/protocolbuffers/protobuf.git",
    shallow_since = "1660065164 +0000",
    #tag = "v21.5",
)

load("//vendor/github.com/open-quantum-safe/liboqs:BUILD.bzl", "liboqs_fetch_archive")

liboqs_fetch_archive()

load("//vendor/github.com/open-quantum-safe/openssl:BUILD.bzl", "open_quantum_safe_openssl_no_liboqs_fetch_archive")

open_quantum_safe_openssl_no_liboqs_fetch_archive()

load("//vendor/github.com/protocolbuffers/protobuf:BUILD.bzl", "protocolbuffers_protobuf_pull_git_repo")

protocolbuffers_protobuf_pull_git_repo()

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

http_archive(
    name = "io_bazel_rules_go",
    sha256 = "099a9fb96a376ccbbb7d291ed4ecbdfd42f6bc822ab77ae6f1b5cb9e914e94fa",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.35.0/rules_go-v0.35.0.zip",
        "https://github.com/bazelbuild/rules_go/releases/download/v0.35.0/rules_go-v0.35.0.zip",
    ],
)

http_archive(
    name = "bazel_gazelle",
    sha256 = "efbbba6ac1a4fd342d5122cbdfdb82aeb2cf2862e35022c752eaddffada7c3f3",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-gazelle/releases/download/v0.27.0/bazel-gazelle-v0.27.0.tar.gz",
        "https://github.com/bazelbuild/bazel-gazelle/releases/download/v0.27.0/bazel-gazelle-v0.27.0.tar.gz",
    ],
)

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")
load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies", "go_repository")

go_repository(
    name = "org_golang_google_protobuf",
    importpath = "google.golang.org/protobuf",
    sum = "h1:d0NfwRgPtno5B1Wa6L2DAG+KivqkdutMf1UhdNx175w=",
    version = "v1.28.1",
)

go_rules_dependencies()

go_register_toolchains(version = "1.18.4")

# See https://github.com/bazelbuild/bazel-gazelle/issues/678
gazelle_dependencies(go_repository_default_config = "@//:WORKSPACE.bazel")

http_archive(
    name = "rules_rust",
    sha256 = "950a3ad4166ae60c8ccd628d1a8e64396106e7f98361ebe91b0bcfe60d8e4b60",
    urls = [
        "https://github.com/bazelbuild/rules_rust/releases/download/0.20.0/rules_rust-v0.20.0.tar.gz",
    ],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
)

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies()

load("//common/build/rust:deps.bzl", "rust_deps")

rust_deps()

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()

load("//common/build/rust/bindgen:toolchains.bzl", "common_build_rust_bindgen_fetch_toolchains", "common_build_rust_bindgen_register_toolchains")
load("//common/build/rust/bindgen/cli:fetch.bzl", "common_build_rust_bindgen_cli_fetch_archive")

common_build_rust_bindgen_fetch_toolchains()

common_build_rust_bindgen_cli_fetch_archive()

load("//common/build/rust/bindgen/cli:build.bzl", "common_build_rust_bindgen_cli_build")

common_build_rust_bindgen_cli_build()

load("@bindgen-cli_deps//:defs.bzl", bindgen_cli_deps = "crate_repositories")

bindgen_cli_deps()

load("@rules_rust//bindgen:repositories.bzl", "rust_bindgen_dependencies")

rust_bindgen_dependencies()

common_build_rust_bindgen_register_toolchains()

load("//common/build/rust/proto:toolchains.bzl", "common_build_rust_proto_register_toolchains")

common_build_rust_proto_register_toolchains()

load("@rules_rust//proto:repositories.bzl", "rust_proto_repositories")

rust_proto_repositories()

http_archive(
    name = "com_google_googletest",
    sha256 = "7897bfaa5ad39a479177cfb5c3ce010184dbaee22a7c3727b212282871918751",
    strip_prefix = "googletest-a4ab0abb93620ce26efad9de9296b73b16e88588",
    urls = ["https://github.com/google/googletest/archive/a4ab0abb93620ce26efad9de9296b73b16e88588.tar.gz"],
)
