workspace(name = "sandwich")

load("//bazel:repositories.bzl", "sandwich_repositories")

sandwich_repositories()

load("//bazel:deps.bzl", "sandwich_deps")

sandwich_deps()

load("//bazel:python_deps.bzl", "sandwich_python_deps")

sandwich_python_deps()

load("//bazel:python_pypi_deps.bzl", "sandwich_python_pypi_deps")

sandwich_python_pypi_deps()

load("//bazel:rust_deps.bzl", "sandwich_rust_deps")

sandwich_rust_deps()

load("@com_sandboxquantum_bartleby//bartleby:deps.bzl", "bartleby_deps")

bartleby_deps()
