cc_library(
    name = "errors",
    hdrs = [":errors.h"],
)

cc_library(
    name = "ioerrors",
    hdrs = [":ioerrors.h"],
)

cc_library(
    name = "tunnel_state",
    hdrs = [":tunnel_state.h"],
)

cc_library(
    name = "tunnel_handshake_state",
    hdrs = [":tunnel_handshake_state.h"],
)

cc_library(
    name = "tunnel_record_errors",
    hdrs = [":tunnel_record_errors.h"],
)

filegroup(
    name = "sandwich_hdrs_file",
    srcs = ["sandwich.h"],
    visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "sandwich_hdrs",
    hdrs = [
        "sandwich.h",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":errors",
        ":ioerrors",
        ":tunnel_handshake_state",
        ":tunnel_record_errors",
        ":tunnel_state",
    ],
)

cc_library(
    name = "io",
    srcs = [
        "io.cc",
    ],
    hdrs = ["io.h"],
    copts = [
        "--std=c++20",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sandwich_hdrs",
        "//cc:result",
        "//cc:tunnel_state",
        "//cc/io",
        "//proto/api/v1:api_cc_proto",
    ],
    alwayslink = True,
)

cc_library(
    name = "tunnel",
    srcs = [
        "tunnel.cc",
    ],
    copts = [
        "--std=c++20",
    ],
    deps = [
        ":sandwich_hdrs",
        "//cc:context",
        "//cc:tunnel",
    ],
    alwayslink = True,
)

cc_library(
    name = "context",
    srcs = [
        "context.cc",
    ],
    copts = [
        "--std=c++20",
    ],
    deps = [
        ":sandwich_hdrs",
        "//cc:context",
        "//cc:context_factory",
    ],
    alwayslink = True,
)

cc_library(
    name = "sandwich",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":context",
        ":io",
        ":sandwich_hdrs",
        ":tunnel",
    ],
    alwayslink = True,
)

cc_binary(
    name = "sandwich_shared",
    srcs = [
    ],
    copts = [
    ],
    linkopts = [
        "-fno-rtti",
        "-fno-exceptions",
    ],
    linkshared = True,
    linkstatic = True,
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":context",
        ":io",
        ":sandwich",
        ":sandwich_hdrs",
        ":tunnel",
        "//cc:sandwich",
    ],
)

cc_test(
    name = "tunnels_test",
    timeout = "short",
    srcs = ["tunnels_test.cc"],
    copts = [
        "--std=c++20",
    ],
    data = [
        "//testdata:tests_data",
    ],
    linkstatic = True,
    deps = [
        ":sandwich",
        "//cc:tests_utils",
        "//proto/api/v1:api_cc_proto",
    ],
)
