filegroup(
    name = "sandwich_hdrs_file",
    srcs = ["sandwich.h"],
    visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "sandwich_hdrs",
    hdrs = [
        "error_codes.h",
        "ioerrors.h",
        "sandwich.h",
        "tunnel_types.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "io",
    srcs = [
        "io.cc",
    ],
    hdrs = ["io.h"],
    copts = [
        "--std=c++20",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sandwich_hdrs",
        "//cc:error",
        "//cc:result",
        "//cc:tunnel_types",
        "//cc/io",
        "//proto/api/v1:api_cc_proto",
    ],
    alwayslink = True,
)

cc_library(
    name = "error",
    srcs = [
        "error.cc",
    ],
    copts = [
        "--std=c++20",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sandwich_hdrs",
        "//cc:error",
    ],
    alwayslink = True,
)

cc_library(
    name = "tunnel",
    srcs = [
        "tunnel.cc",
    ],
    copts = [
        "--std=c++20",
    ],
    deps = [
        ":sandwich_hdrs",
        "//cc:context",
        "//cc:tunnel",
    ],
    alwayslink = True,
)

cc_library(
    name = "context",
    srcs = [
        "context.cc",
    ],
    copts = [
        "--std=c++20",
    ],
    deps = [
        ":sandwich_hdrs",
        "//cc:context",
        "//cc:context_factory",
    ],
    alwayslink = True,
)

cc_library(
    name = "sandwich",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":context",
        ":error",
        ":io",
        ":sandwich_hdrs",
        ":tunnel",
    ],
    alwayslink = True,
)

cc_binary(
    name = "sandwich_shared",
    srcs = [
    ],
    copts = [
    ],
    linkopts = [
        "-fno-rtti",
        "-fno-exceptions",
    ],
    linkshared = True,
    linkstatic = True,
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":context",
        ":error",
        ":io",
        ":sandwich",
        ":sandwich_hdrs",
        ":tunnel",
        "//cc:sandwich",
    ],
)

cc_library(
    name = "tests_utils",
    hdrs = ["tests_utils.h"],
    copts = [
        "--std=c++20",
    ],
)

cc_test(
    name = "tunnels_test",
    timeout = "short",
    srcs = ["tunnels_test.cc"],
    copts = [
        "--std=c++20",
    ],
    data = [
        "//testdata:tests_data",
    ],
    linkstatic = True,
    deps = [
        ":sandwich",
        ":tests_utils",
        "//proto/api/v1:api_cc_proto",
    ],
)
