filegroup(
    name = "sandwich_hdrs_file",
    srcs = ["sandwich.h"],
    visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "sandwich_hdrs",
    hdrs = [
        "error_codes.h",
        "ioerrors.h",
        "sandwich.h",
        "tunnel_types.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "sandwich",
    hdrs = ["sandwich.h"],
    linkopts = [] + select({
        "@platforms//os:ios": [
            "-framework",
            "Security",
        ],
        "//conditions:default": [],
    }),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sandwich_hdrs",
        "//proto/api/v1:api_cc_proto",
        "//rust:sandwich_openssl_ffi_static",
    ],
    alwayslink = True,
)

cc_test(
    name = "tunnels_test",
    timeout = "short",
    srcs = ["tunnels_test.cc"],
    copts = [
        "--std=c++20",
    ],
    data = [
        "//testdata:tests_data",
    ],
    linkstatic = True,
    deps = [
        ":sandwich",
        "//proto:sandwich_cc_proto",
        "//proto/api/v1:api_cc_proto",
    ],
)
