cc_library(
    name = "exports",
    hdrs = ["exports.h"],
    copts = [
        "--std=c++20",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "error",
    srcs = ["error.cc"],
    hdrs = [
        "error.h",
        "error_codes.h",
    ],
    copts = [
        "--std=c++20",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_test(
    name = "error_test",
    timeout = "short",
    srcs = ["error_test.cc"],
    copts = [
        "--std=c++20",
    ],
    linkstatic = True,
    deps = [
        ":error",
        ":error_strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "result",
    srcs = ["result.h"],
    copts = [
        "--std=c++20",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":error",
    ],
)

cc_library(
    name = "data_source",
    srcs = ["data_source.cc"],
    hdrs = ["data_source.h"],
    copts = [
        "--std=c++20",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":error",
        ":result",
        "//proto/api/v1:api_cc_proto",
    ],
)

cc_library(
    name = "context",
    srcs = ["context.cc"],
    hdrs = ["context.h"],
    copts = [
        "--std=c++20",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":error",
        ":exports",
        ":result",
        ":tunnel",
        "//cc/io",
        "//proto/api/v1:api_cc_proto",
    ],
    alwayslink = True,
)

cc_library(
    name = "context_factory",
    srcs = ["context_factory.cc"],
    copts = [
        "--std=c++20",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":context",
        "//cc/openssl:context",
        "//cc/openssl:context_factory",
        "//proto/api/v1:api_cc_proto",
    ],
    alwayslink = True,
)

cc_library(
    name = "tunnel_types",
    hdrs = ["tunnel_types.h"],
    copts = [
        "--std=c++20",
    ],
    visibility = ["//visibility:public"],
    alwayslink = True,
)

cc_library(
    name = "tunnel",
    srcs = ["tunnel.cc"],
    hdrs = ["tunnel.h"],
    copts = [
        "--std=c++20",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":error",
        ":exports",
        ":tunnel_types",
        "//cc:result",
        "//cc/io",
        "//proto:sandwich_cc_proto",
    ],
    alwayslink = True,
)

cc_library(
    name = "error_strings",
    srcs = ["error_strings.cc"],
    hdrs = ["error_strings.h"],
    copts = [
        "--std=c++20",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":error",
        ":tunnel_types",
        "//cc/io:io_errors",
    ],
    alwayslink = True,
)

cc_library(
    name = "sandwich",
    copts = [
        "--std=c++20",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":context_factory",
        ":error_strings",
        ":tunnel",
        "//cc/openssl:sandwich",
    ],
    alwayslink = True,
)

cc_library(
    name = "tests_utils",
    srcs = ["tests_utils.cc"],
    hdrs = ["tests_utils.h"],
    copts = [
        "--std=c++20",
    ],
    visibility = ["//cc:__subpackages__"],
    deps = [
        ":sandwich",
        "//cc/io:socket",
        "@com_google_googletest//:gtest_main",
    ],
)
