# Copyright (c) SandboxAQ. All rights reserved.
# SPDX-License-Identifier: AGPL-3.0-only

load("//common/rules/mkdocs:rules.bzl", "mkdocs_tree")

mkdocs_tree(
    name = "mkdocs",
    srcs = [
        "bazel/WORKSPACE.bazel",
    ],
    path = "examples/bazel/",
    visibility = ["//docs:__subpackages__"],
)
