load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "errors_proto",
    srcs = ["errors.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "tunnel_proto",
    srcs = ["tunnel.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "io_proto",
    srcs = ["io.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "sandwich_proto",
    srcs = ["sandwich.proto"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":errors_proto",
        ":io_proto",
        ":tunnel_proto",
    ],
)

##############
# Go library #
##############

go_proto_library(
    name = "sandwich_go_proto",
    importpath = "github.com/sandbox-quantum/sandwich/proto/sandwich",
    protos = [
        ":errors_proto",
        ":io_proto",
        ":sandwich_proto",
        ":tunnel_proto",
    ],
    visibility = ["//visibility:public"],
)

###############
# C++ library #
###############

cc_proto_library(
    name = "sandwich_cc_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":sandwich_proto",
    ],
)
